Fixed chat text overflow being hidden

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -81,7 +81,6 @@ button {
     border-radius: 10px;
     padding: 0 0 .25rem;
     margin: .5rem;
-    overflow: hidden;
     flex-shrink: 0;
 }
 
